[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enveloper"
version = "0.1.0"
description = "Manage .env secrets via system keychain with cloud store plugins"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ramin Firoozye" }]
keywords = ["secrets", "keychain", "env", "dotenv", "ssm", "github-secrets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "keyring>=25.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
aws = ["boto3>=1.35"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/raminf/enveloper"
Repository = "https://github.com/raminf/enveloper"
Issues = "https://github.com/raminf/enveloper/issues"

[project.scripts]
enveloper = "enveloper.cli:cli"

[project.entry-points."enveloper.stores"]
keychain = "enveloper.stores.keychain:KeychainStore"
"aws-ssm" = "enveloper.stores.aws_ssm:AwsSsmStore"
github = "enveloper.stores.github:GitHubStore"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
